--- a/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
+++ b/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
@@ -59,6 +59,7 @@
 			 [Embed(source='/assets/eventEditor/eventEditor.swf', symbol='copyCursor')]
 			 [Bindable]
 			 public var plus:Class;
+
 			 
 			[Embed(source='/assets/eventEditor/eventEditor.swf', symbol='rejectCursor')]
 			[Bindable]
@@ -75,14 +76,17 @@
 	 		private var changeWatcher:ChangeWatcher ;
 	 		private function showHandler():void
 	 		{
-	 			clientActionsArray = [];
-	 			serverActionsArray = [];
-				eventsArray = [];
-				linesArray = [];
+//	 			clientActionsArray = [];
+//	 			serverActionsArray = [];
+//				eventsArray = [];
+//				linesArray = [];
 				
 	 			changeWatcher = BindingUtils.bindProperty(trContainer, 'dataProvider', dataManager, 'listPages')
 	 			trContainer.showHandler();
 	 			trContainer.addEventListener(EventEditorEvent.DATA_CHANGED, dataChangedListener);
+	 			
+	 			dataManager.addEventListener(DataManagerEvent.GET_APPLICATION_EVENTS_COMPLETE, applicationEvenLoadedHandler);
+	 			dataManager.addEventListener(DataManagerEvent.SET_APPLICATION_EVENTS_COMPLETE, applEventSevedHandler)
 	 			
 	 			btLine.addEventListener(MouseEvent.CLICK, lineClikHandler );
 	 			
@@ -99,32 +103,42 @@
 	 			changeWatcher.unwatch();
 	 			trContainer.hideHandler();
 	 			trContainer.removeEventListener(EventEditorEvent.DATA_CHANGED, dataChangedListener);
-				can.removeAllChildren();
 				
-				clientActionsArray = [];
+				
+				dataManager.removeEventListener(DataManagerEvent.GET_APPLICATION_EVENTS_COMPLETE, applicationEvenLoadedHandler);
+				dataManager.removeEventListener(DataManagerEvent.SET_APPLICATION_EVENTS_COMPLETE, applEventSevedHandler)
+				
+				can.removeAllChildren();
+//				nullingData();
+				
+//				dataChanged = false;
+	 		}
+	/* 		
+	 		private function nullingData():void
+	 		{
+	 			
+	 			
+	 			clientActionsArray = [];
 				serverActionsArray = [];
 				eventsArray = [];
 				linesArray = [];
-				
-				dataChanged = false;
 	 		}
-	 		
+	 */		
 	 		private var getApplEventID:String;
 	 		private function dataChangedListener(eeEvt:EventEditorEvent):void
 	 		{
-	 			dataManager.addEventListener(DataManagerEvent.GET_APPLICATION_EVENTS_COMPLETE, applicationEvenLoadedHandler);
 	 		
 	 			getApplEventID = eeEvt.objID;
 	 			
-	 			if(dataChanged)
-	 			{
+//	 			if(dataChanged)
+//	 			{
 //	 				creatDataToServer(); //eeEvt.objID
 	 				
-	 			}else
-	 			{
+//	 			}else
+//	 			{
 	 				dataManager.getApplicationEvents(getApplEventID);
-	 			}	
-	 			dataChanged = false;
+//	 			}	
+//	 			dataChanged = false;
 	 			
 	 			can.removeAllChildren();
 //	 			trace('-----From Server-----\n' +  eeEvt.data);
@@ -132,9 +146,17 @@
 	 			trActions.dataProvider = eeEvt.data;
 	 		}
 	 		
+	 		private function markButton():void
+	 		{
+	 			btSave.setStyle("color", "0xCC0000");
+				btSave.setStyle("borderColor", "0xEE0000");
+	 		}
+	 		
 	 		private function applicationEvenLoadedHandler(dmEvt:DataManagerEvent):void
 	 		{
-	 			dataManager.removeEventListener(DataManagerEvent.GET_APPLICATION_EVENTS_COMPLETE, applicationEvenLoadedHandler);
+	 			btSave.setStyle("color", "0x000000");
+				btSave.setStyle("borderColor", "0xAAB3B3");
+				
 	 			cretDat(dmEvt.result);
 	 		}
 	 		
@@ -190,7 +212,9 @@
 	        	newElement.x = event.localX;
 	        	newElement.y = event.localY;
 	        	
-	 			dataChanged = true;		
+	        	markButton();
+	        	
+//	 			dataChanged();		
 	        }   
 	        
 	        private function  setListeners4Action(el:Object):Object
@@ -240,7 +264,7 @@
  	        
 	        private function objectClickHandler(mEvt:MouseEvent):void
 	        {
-	        	dataChanged = true;
+	        	markButton();
 	        }
 	        
 	        private function deletElementHandler(trEvt:TreeEditorEvent):void
@@ -428,7 +452,7 @@
 			private var curContainerID:String;
 			public var curContainerTypeID:String;
 			private var dataToServer:XML; 
-			private var dataChanged:Boolean = false;
+//			private var dataChanged:Boolean = false;
 
 			private function treeContainerChangeHandler(evt:Event):void
 			{
@@ -483,7 +507,8 @@
 				dX = can.mouseX -dX;
 				dY = can.mouseY -dY;
 				
-				trace('dX: ' + dX+ ' DY: ' + dY);
+//				dataChanged();
+				
 				Application.application.addEventListener(MouseEvent.MOUSE_MOVE, mouseMoveHandler);
 				Application.application.addEventListener(MouseEvent.MOUSE_UP, mouseUpHandler);
 			}
@@ -671,10 +696,16 @@
 				}
 				
 //				trace('curContainerID TO server: '+curContainerID+'\n'+ dataToServer.toXMLString());
-		     	dataManager.addEventListener(DataManagerEvent.SET_APPLICATION_EVENTS_COMPLETE, applEventSevedHandler)
+		     	
 				dataManager.setApplicationEvents(curContainerID, dataToServer.toXMLString());
 				trace('****************\n '+ curContainerID);
 				trace(dataToServer.toXMLString());
+			}
+			
+			private function revert():void
+			{
+							
+				dataManager.getApplicationEvents(getApplEventID);
 			}
 			
 			private function applEventSevedHandler(dmEvt:DataManagerEvent):void
@@ -685,7 +716,7 @@
 			private function cretDat(xmlToTree:XML=null):void
 			{
 				//trace(xmlToTree.toXMLString());
-//				can.removeAllChildren();
+				can.removeAllChildren();
 				trace('----From Serve----'+xmlToTree);
 				
 				// Client Action
@@ -786,6 +817,7 @@
 			private function lineClikHandler(msEvt:MouseEvent):void
 			{
 				removeLine();
+				markButton()
 			}
 			
 			private function  removeLine():void
@@ -843,7 +875,10 @@
     				dragDrop="dragDropHandler(event);" borderColor="#DFDFDF">
                 
             </mx:Canvas>
-            <mx:Button label="Save" click="{creatDataToServer()}"/>
+             <mx:HBox>
+            	<mx:Button id="btSave" label="Save" click="{creatDataToServer()}"/>
+	            <mx:Button label="Revert" click="{revert()}"/>
+            </mx:HBox>
         </mx:VBox>
 	</mx:HDividedBox>
 		
