git-svn-id: http://svn.vdombox.ru/flextools/trunk@3107 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
+++ b/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
@@ -692,7 +692,7 @@
 					temXML.@Left 		= serverActionsArray[actID].x;
 					temXML.@State		= serverActionsArray[actID].State;
 					
-					temXML.@Language	= "pyton";
+					temXML.@Language	= serverActionsArray[actID].language;
 					
 					temXML.appendChild(serverActionsArray[actID].parametrs);
 					
