--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:Canvas
  xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" creationComplete="creationCompleteHandler()" hide="hideHendler()" 
-			show="showHnadler()" label="add Element" xmlns:ns1="vdom.components.treeEditor.colormenu.*" xmlns:colorMenu02="vdom.components.treeEditor.colorMenu02.*" xmlns:treeEditor="vdom.components.treeEditor.*">
+			show="showHnadler()" label="add Element" xmlns:ns1="vdom.components.treeEditor.colormenu.*" xmlns:colorMenu02="vdom.components.treeEditor.colorMenu02.*" xmlns:treeEditor="vdom.components.treeEditor.*" xmlns:containers="vdom.containers.*">
 	
 <mx:Metadata>
 		[ResourceBundle("Tree")]
@@ -9,6 +9,7 @@
 
 <mx:Script>
 	<![CDATA[
+		import mx.controls.Button;
 		import mx.charts.BubbleChart;
 		import mx.effects.easing.Elastic;
 		import vdom.containers.ApplicationPanel;
@@ -132,7 +133,8 @@
 	
 	private var dX:Number;
 	private var dY:Number;
-	private var mainWidth:Button= new Button;
+	private var mainWidth:Button = new Button();
+	
 	private function startReDrawLineHandler(trEvt:TreeEditorEvent):void
 	{
 		// object to Top
@@ -412,7 +414,7 @@
 			for (var sknTrElem:String in massLines[level][frsTrElem])
 			{
 				massLines[level][frsTrElem][sknTrElem].visible = true;
-				masIndex[level][frsTrElem][sknTrElem].visible  = true && chShowSignature.selected;;
+				masIndex[level][frsTrElem][sknTrElem].visible  = true && shSingnature;
 			}
 	}
 
@@ -562,9 +564,10 @@
 		
 	} 
 	
+	private var shSingnature:Boolean;
 	private function showSignature():void
 	{
-		
+		shSingnature = true;
 		for(var level:String in massLines)
 		{
 			if(colmen2.showLevel(level) == true)
@@ -573,7 +576,25 @@
 				{
 					for(var ind2:String in massLines[level][ind1])
 					{
-						masIndex[level][ind1][ind2].visible = chShowSignature.selected;
+						masIndex[level][ind1][ind2].visible = shSingnature;
+					}
+				}
+			}
+		}
+	}
+	
+	private function hideSignature():void
+	{
+		shSingnature = false;
+		for(var level:String in massLines)
+		{
+			if(colmen2.showLevel(level) == true)
+			{
+				for(var ind1:String in massLines[level])
+				{
+					for(var ind2:String in massLines[level][ind1])
+					{
+						masIndex[level][ind1][ind2].visible = shSingnature;
 					}
 				}
 			}
@@ -581,24 +602,7 @@
 	}
 	]]>
 </mx:Script>
-<mx:HBox width="100%" height="100%">
-<mx:VBox width="100%" height="100%">
-	<mx:HBox bottom="0" width="100%" height="30" 
-			paddingLeft="5" paddingBottom="5" paddingRight="5" paddingTop="5">
-		<mx:VRule height="100%"/>
-		<mx:Button  label="{resourceManager.getString('Tree','new_page')}"  
-		 	 	click="addTreeElementLauncher()"/>
-	 	<mx:Button  label="{resourceManager.getString('Tree','auto_Spacing')}"    click="autoSpacing()"/>
-	 	<mx:VRule height="100%" />
-		<mx:CheckBox id="chExpandAll" label= "{resourceManager.getString('Tree','expand_all')}"  click="expandAll()"/>
-		<mx:CheckBox id="chShowSignature" label= "{resourceManager.getString('Tree','show_signature')}"
-		  click="showSignature()"/>
-		 <mx:VRule height="100%" />
-		<mx:Button id="btSave" label="Save" click="{saveToServer()}"/>
-		<mx:Button label="Revert" click="{revert()}"/>
-		<mx:VRule height="100%" />
-		
-	</mx:HBox>
+<mx:HDividedBox width="100%" height="100%">
 
 <mx:Canvas id="main"   width="100%" height="100%" backgroundColor="#ffffff" moveEffect="itemsChangeEffect1">
 
@@ -614,18 +618,44 @@
 	</mx:Canvas>
 	
 		
+
+
+
+<mx:VBox right="0">
+	<containers:ClosablePanel width="100%" label="">
+		<mx:VBox width="100%" 	verticalGap="0"  verticalAlign="0" backgroundColor="0x999999">
+			
+			<treeEditor:TreeButton  labelBt="{resourceManager.getString('Tree','new_page')}"  click="addTreeElementLauncher()"
+				iconBt="@Embed(source='/assets/treeEditor/new_page.png')"/>
+			
+			<treeEditor:TreeButton labelBt="{resourceManager.getString('Tree','auto_Spacing')}"  click="autoSpacing()"
+				iconBt="@Embed(source='/assets/treeEditor/tree.png')" />
+				
+			<treeEditor:TreeButton labelBt="{resourceManager.getString('Tree','show_signature')}"  click="showSignature()"
+				iconBt="@Embed(source='/assets/treeEditor/show_singnature.png')"/>
+			
+			<treeEditor:TreeButton labelBt="Hide signature"  click="hideSignature()"
+				iconBt="@Embed(source='/assets/treeEditor/hide_signature.png')"/>
+			
+			<treeEditor:TreeButton labelBt="{resourceManager.getString('Tree','expand_all')}"/>
+			<treeEditor:TreeButton labelBt="Collapse all" />	
+			<treeEditor:TreeButton labelBt="Revert" click="{revert()}"
+				iconBt="@Embed(source='/assets/treeEditor/revert.png')"/>
+				
+			<treeEditor:TreeButton id="btSave" labelBt="Save" click="{saveToServer()}" 
+				iconBt="@Embed(source='/assets/treeEditor/save.png')"/>
+				
+		 	
+			<mx:CheckBox id="chExpandAll" label= "{resourceManager.getString('Tree','expand_all')}"  click="expandAll()"/>
+			
+			
+		</mx:VBox>		
+	</containers:ClosablePanel>	
+	<containers:ClosablePanel width="100%">
+		<colorMenu02:ColorMenu2 id="colmen2" text="{resourceManager.getString('Tree','levels')}" />
+	</containers:ClosablePanel>	
 </mx:VBox>
 
-
-<mx:Canvas right="0">
-	
-	<colorMenu02:ColorMenu2 id="colmen2" text="{resourceManager.getString('Tree','levels')}" />
-</mx:Canvas>
-	
-
-		  	
-	
-
-</mx:HBox>
+</mx:HDividedBox>
 
 </mx:Canvas>
