font fix (Tahoma) types Accordion add usual elements ColorPicker fix etc... hz davno bbILO
git-svn-id: http://svn.vdombox.ru/flextools/trunk@3109 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/_src/theme/css/default.css
+++ b/IDE/Vdom/_src/theme/css/default.css
@@ -28,7 +28,7 @@ WindowedApplication {
 	
 	statusBarBackgroundColor: #000000;
 	backgroundAlpha: 0;
-	borderStyle: none;	
+	borderStyle: none;
 }
 
 AdvancedDataGrid {
@@ -65,6 +65,11 @@ VdomTitleBar {
 TabNavigator {
 		
 	tabStyleName: "tabStyle";
+}
+
+TextInput {
+	fontFamily: "Tahoma";
+	color: "red"
 }
 
 .tabStyle {
