--- a/IDE/Vdom/vdom/controls/multiLine/MultiLineWindow.mxml
+++ b/IDE/Vdom/vdom/controls/multiLine/MultiLineWindow.mxml
@@ -138,7 +138,7 @@ private function insertResourceLink():void
 ]]>
 </mx:Script>
 
-<mx:TextArea width="100%" height="100%" id="textAreaContainer" creationComplete="init();" text="{attributeValue}"/>
+<mx:TextArea width="100%" height="100%" id="textAreaContainer" creationComplete="init();" text="{attributeValue}" fontFamily="Tahoma"/>
 
 <mx:ControlBar horizontalAlign="right"
 	paddingLeft="8" paddingRight="8" paddingBottom="5">
