git-svn-id: http://svn.vdombox.ru/flextools/trunk@3118 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/controls/resourceBrowser/ListItem.mxml
+++ b/IDE/Vdom/vdom/controls/resourceBrowser/ListItem.mxml
@@ -5,7 +5,7 @@
 -->
 <mx:HBox
 	xmlns:mx="http://www.adobe.com/2006/mxml"
-	width="174" height="50" 
+	height="50" 
 	horizontalAlign="left" borderStyle="solid"
 	verticalAlign="middle" verticalScrollPolicy="off"
 	horizontalScrollPolicy="off"
